# Sql_injection_code

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_10_10.md  CHANGELOG.md  DEMO_GUIDE.md  DOCUMENTATION.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  SECURITY_WHITEPAPER.md  SQL_Dataset_Extended.csv  SQL_Injection_Analysis_FULL_FIXED.ipynb  START.md  TESTING_RESULTS.md  VDCNN_Model.ipynb  agent.py  api_server.py  app.py  benchmark.py  bypass_r3.py  bypass_r4.py  cli.py  config.py  demo_for_clients.py  demo_site.py  docker-compose.yml  fastapi_middleware.py  global_test.py  incident_logger.py  load_test.py  logger.py  metrics.py  model_metadata.json  prometheus.yml  pyproject.toml  pytest.ini  quick_test.py  (+17 more)
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  EVALUATION.md
models/: bilstm_sql_detector.keras  char_bilstm_detector.pt  char_bilstm_model.py  char_cnn_detector.pt  char_cnn_model.py  char_tokenizer.json  char_tokenizer.py  cnn_sql_detector.keras  dl_tokenizer.pkl  lstm_sql_detector.keras
sql_injection_protector/: __init__.py  version.py
sql_injection_protector/cli/: __init__.py  main.py
sql_injection_protector/config/: __init__.py  defaults.yaml
sql_injection_protector/core/: __init__.py  agent.py  config.py  exceptions.py  result.py
sql_injection_protector/layers/: __init__.py
sql_injection_protector/layers/decision/: __init__.py  actions.py  engine.py  policies.py
sql_injection_protector/layers/detection/: __init__.py  base.py  heuristic.py  signature.py
sql_injection_protector/layers/detection/ml/: __init__.py  (+4 more)
sql_injection_protector/layers/features/: __init__.py  behavioral.py  static.py  vector.py
sql_injection_protector/layers/learning/: __init__.py  collector.py  dataset.py  labeler.py  retraining.py
sql_injection_protector/layers/observability/: __init__.py  cef.py  metrics.py  persistence.py  syslog.py
sql_injection_protector/layers/preprocessing/: __init__.py  decoder.py  normalizer.py  pipeline.py  tokenizer.py
sql_injection_protector/layers/request/: __init__.py  context.py  gateway.py
sql_injection_protector/layers/response/: __init__.py  honeypot.py  rate_limiter.py  sanitizer.py  session.py
sql_injection_protector/storage/: __init__.py  redis.py
src/detector/: core.py
tests/: __init__.py  benchmark_cnn_cuda.py  confest.py  conftest.py  generate_massive_test.py  stress_test.py  test_advanced.py  test_adversarial_fuzz.py  test_agent.py  test_api.py  test_bypass_audit.py  test_detector.py  test_distributed.py  test_preprocessing.py  test_state_backend.py
training/: bilstm_training_log.json  cnn_training_log.json  generate_dataset.py  rf_training_log.json  train_bilstm.py  train_cnn.py  train_rf.py
(+9 files in other folders)
